fix(admin-view): Fix some spacing issues

--- a/admin-view/src/app/assign/discipline-match-list/discipline-match-list.component.scss
+++ b/admin-view/src/app/assign/discipline-match-list/discipline-match-list.component.scss
@@ -12,9 +12,13 @@
 }
 
 .discipline-match-list-root {
-  height: 25px;
+  height: 30px;
 }
 
 .without-margin {
   margin-bottom: 0px;
+}
+
+.mat-list-item {
+  height: 60px;
 }
